refactor: return DTOs instead of IDs for componentPacements